design fixed and dark mode off

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -24,4 +24,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
